[workspace]
resolver = "2"
members = [
  "apps/desktop-tauri/src-tauri",
  "crates/dtt-core",
  "crates/dtt-storage",
  "crates/dtt-correlation",
  "crates/dtt-detectors",
  "crates/dtt-export",
  "crates/dtt-integrity"
]

[workspace.package]
edition = "2021"
license = "UNLICENSED"
version = "0.1.0"

[workspace.metadata.devtools-translator]
mode = "local_beta"
notes = "Implemented desktop app + MV3 extension with validated local launch and smoke path"
