[package]
name = "dtt-detectors"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.5"
dtt-core = { path = "../dtt-core" }
regex = "1.12"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_canonicalizer = "0.3"
thiserror = "2.0"
zstd = "0.13"
