[package]
name = "dtt-export"
version = "0.1.0"
edition = "2021"

[dependencies]
dtt-core = { path = "../dtt-core" }
dtt-integrity = { path = "../dtt-integrity" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_canonicalizer = "0.3"
thiserror = "2.0"
blake3 = "1.8"
zstd = "0.13"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.27"
