[package]
name = "dtt-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.8"
dtt-correlation = { path = "../dtt-correlation" }
dtt-core = { path = "../dtt-core" }
dtt-detectors = { path = "../dtt-detectors" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_canonicalizer = "0.3"
sha2 = "0.10"
thiserror = "2.0"
url = "2.5"
zstd = "0.13"
