[package]
name = "dtt-desktop-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
desktop_shell = [
  "dep:tauri",
  "dep:tauri-plugin-deep-link",
  "dep:tauri-plugin-single-instance",
]

[dependencies]
dtt-core = { path = "../../../crates/dtt-core" }
dtt-export = { path = "../../../crates/dtt-export" }
dtt-integrity = { path = "../../../crates/dtt-integrity" }
dtt-storage = { path = "../../../crates/dtt-storage" }
futures-util = "0.3"
rand = "0.9"
serde_json = "1.0"
serde_json_canonicalizer = "0.3"
sha2 = "0.10"
thiserror = "2.0"
tauri = { version = "2.0", optional = true, default-features = false, features = ["wry"] }
tauri-plugin-deep-link = { version = "2.0", optional = true }
tauri-plugin-single-instance = { version = "2.0", optional = true }
tokio = { version = "1.44", features = ["rt-multi-thread", "sync", "time", "net", "macros"] }
tokio-tungstenite = "0.24"
url = "2.5"
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
